# GenTruthTable

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp  tokenizer.cpp  truthtable.cpp
src/includes/: symbols.h  tokenizer.h  truthtable.h
unit_test/: CMakeLists.txt  main.cpp
